--- a/main.css
+++ b/main.css
@@ -98,7 +98,7 @@ q:before, q:after {
 	height: 20px;
 	margin-left: 550px; 
 	margin-top: 10px; 
-	box-shadow: 10px 10px 5px #888888;
+	box-shadow: 10px 10px 5px #grey;
 }
 #btnGuess {
 	text-align: center; 
